Replace project path for hot reload