@@ -11,9 +11,11 @@ import com.developmentontheedge.be5.metadata.serialization.ModuleLoader2;
 import com.developmentontheedge.be5.metadata.serialization.Serialization;
 import com.developmentontheedge.be5.metadata.serialization.WatchDir;
 import one.util.streamex.StreamEx;
+import org.yaml.snakeyaml.Yaml;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.MalformedURLException;
+import java.io.InputStreamReader;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -25,6 +27,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Logger;
 
@@ -121,21 +124,62 @@ public class ProjectProviderImpl implements ProjectProvider
     }
 
     /**
-     * For Watch files
-     * @param urls
+     * For hot reload
+     * @param urls projects URL
      */
-    private void replaceURLtoSource(ArrayList<URL> urls) throws MalformedURLException
+    private void replaceURLtoSource(ArrayList<URL> urls)
     {
-        String targetPath = "target/classes/";
-        String projectPath = "";
-        for (int i =0; i<urls.size(); i++)
+        try
         {
-            if(urls.get(i).getPath().contains(targetPath)){
-                URL oldUrl = urls.get(i);
-                urls.set(i, new URL(urls.get(i), urls.get(i).getPath().replace(targetPath, projectPath)));
-                log.info("replace project path \nfrom target:\t" + oldUrl +"\nto src:\t" + urls.get(i));
+            Map<String, String> modulesSource = readDevPathsToSourceProjects();
+            StringBuilder sb = new StringBuilder("Replace project path for hot reload:");
+            boolean started = false;
+            for (int i = 0; i < urls.size(); i++)
+            {
+                for (Map.Entry<String, String> moduleSource : modulesSource.entrySet())
+                {
+                    String name = getProjectName(urls.get(i));
+                    if (name.equals(moduleSource.getKey()))
+                    {
+                        started = true;
+                        urls.set(i, Paths.get(moduleSource.getValue()).toUri().toURL());
+                        sb.append("\n - " + name + ": " + urls.get(i));
+                    }
+                }
             }
+            if(started)log.info(sb.toString());
         }
+        catch (IOException e)
+        {
+            e.printStackTrace();
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    private String getProjectName(URL url) throws IOException
+    {
+        BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream(), "utf-8"));
+        Map<String, Object> module = (Map<String, Object>)new Yaml().load(reader);
+        return module.entrySet().iterator().next().getKey();
+    }
+
+    @SuppressWarnings("unchecked")
+    Map<String, String> readDevPathsToSourceProjects() throws IOException
+    {
+        ArrayList<URL> urls = Collections.list(getClass().getClassLoader().getResources("dev.yaml"));
+        if(urls.size() == 1){
+            BufferedReader reader = new BufferedReader(new InputStreamReader(urls.get(0).openStream(), "utf-8"));
+            List<Map<String, String>> modulesTemp = ( List<Map<String, String>> ) ((Map<String, Object>) new Yaml().load(reader)).get("pathsToSourceProjects");
+            if(modulesTemp == null)return new HashMap<>();
+            Map<String, String> modules = new HashMap<>();
+            for (Map<String, String> element: modulesTemp)
+            {
+                Map.Entry<String, String> entry = element.entrySet().iterator().next();
+                modules.put(entry.getKey(), entry.getValue());
+            }
+            return modules;
+        }
+        return new HashMap<>();
     }
 
     Project getProject(List<Project> availableModulesAndProjects)
